WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182823
HarfBuzzFace should not be ref-counted
https://bugs.webkit.org/show_bug.cgi?id=182823
Summary
HarfBuzzFace should not be ref-counted
Zan Dobersek
Reported
2018-02-14 23:53:57 PST
HarfBuzzFace should not be ref-counted
Attachments
Patch
(5.13 KB, patch)
2018-02-15 00:10 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.20 KB, patch)
2018-02-15 02:00 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2018-02-15 00:10:03 PST
Created
attachment 333883
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-02-15 01:45:26 PST
Comment on
attachment 333883
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=333883&action=review
> Source/WebCore/platform/graphics/harfbuzz/HarfBuzzFace.h:44 > +class HarfBuzzFace { > public:
WTF_MAKE_FAST_ALLOCATED;
Zan Dobersek
Comment 3
2018-02-15 02:00:47 PST
Created
attachment 333887
[details]
Patch for landing
Zan Dobersek
Comment 4
2018-02-15 02:10:24 PST
Comment on
attachment 333887
[details]
Patch for landing Clearing flags on attachment: 333887 Committed
r228507
: <
https://trac.webkit.org/changeset/228507
>
Zan Dobersek
Comment 5
2018-02-15 02:10:29 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-02-15 02:11:20 PST
<
rdar://problem/37564034
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug